# Spotify_ISD_backend

./: .env.example  .env.production.example  .gitignore  COLLABORATION_FIXES.md  CONFIGURATION_SUMMARY.md  DATABASE_SEEDING.md  README.md  docker-compose.prod.yml  docker-compose.yml  manage.sh  migrate_responses.py  render.yaml  render.yaml.template  test_invite_flow.py
docs/: SCHEMA.md  (+40 more)
services/core/: .env.example  Dockerfile  docker-entrypoint.sh  manage.py  pyproject.toml  pytest.ini
services/core/.omc/state/: last-tool-error.json
services/core/core/: settings.py  urls.py
services/core/historyapp/: action_extractors.py  handlers.py  middleware.py  models.py  serializers.py  services.py  urls.py  views.py
services/core/historyapp/migrations/: 0001_initial.py  0002_undoredoconfiguration_useraction.py  0003_alter_useraction_action_type.py
services/core/playlistapp/: enhanced_schemas.py  models.py  serializers.py  urls.py  views.py
services/core/playlistapp/migrations/: 0001_initial.py  0002_userplaylistarchive.py  0003_userplaylistlike_userplaylistfollow.py  (+5 more)
services/core/searchapp/: models.py  serializers.py  urls.py  views.py
services/core/tests/: README.md  __init__.py  conftest.py
services/core/trackapp/: models.py  serializers.py  urls.py  views.py
services/core/utils/: mixins.py  responses.py  service_clients.py
services/playback/: .env.example  Dockerfile  docker-entrypoint.sh  pyproject.toml
services/playback/core/: asgi.py  settings.py  urls.py  wsgi.py
services/playback/playbackapp/: apps.py  models.py  serializers.py  urls.py  views.py
(+143 files in other folders)
